# toyota-avalon-2018-touchscreen-hacks

./: .gitignore  LA070WV1-TD01_pinout.md  datasheet.txt  encoder_test.py  icl7660_vgl_generator.md
.playwright-mcp/: mp3394-results.md  page-2026-06-06T01-41-11-830Z.yml  page-2026-06-07T02-18-15-626Z.yml  page-2026-06-07T02-18-44-806Z.yml  page-2026-06-07T03-04-48-287Z.yml  page-2026-06-07T03-05-02-337Z.yml  page-2026-06-07T03-06-07-065Z.yml
nano_esp32/touch_calibrate/: touch_calibrate.ino
nano_esp32/toyota_display/: toyota_display.ino
pi/: backlight.py  cmdline.txt  config.txt  config_remote.txt  doom-build-notes.md  touch_test.py
pico_tcon/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
pico_tcon/.cargo/: config.toml
pico_tcon/docs/: pico_tcon_datasheet_timing.md
pico_tcon/src/: main.rs
