[package]
name = "pico_tcon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime + the #[embassy_executor::main] entry-point attribute.
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }

# Chip HAL for the RP2040: GPIO, PIO, clocks, the boot2 bootloader, etc.
embassy-rp = { version = "0.10.0", features = ["rp2040", "time-driver", "critical-section-impl"] }

# embassy-rp's "time-driver" implements the clock for this crate; required.
embassy-time = "0.5.1"

# ARM Cortex-M core support: startup code, vector table, the reset handler.
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

[profile.release]
debug = true        # keep symbols (no runtime cost) for inspection
opt-level = "s"     # optimize for small code size
